Fix to the fix: make search box label visible to screen reader users.

--- a/etcstyle.css
+++ b/etcstyle.css
@@ -104,8 +104,14 @@ ul.secondary-links a.active {
 }
 
 #search-box #edit-search-theme-form-1-wrapper label {
-  /* Keep label for screen readers */
-  text-indent: -9999px;
+  /* Keep label for screen reader users */
+  /* see http://webaim.org/techniques/css/invisiblecontent */
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
 }
 /* @end */
 
